<?xml version="1.0"?>
<package>
  <name>buildit_marker_server</name>
  <version>1.0.0</version>
  <description>The buildit_marker_server package</description>

 
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>


  <license>GPL</license>

  <author email="dash@clearpathrobotics.com">Devon Ash</maintainer>


    <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  
</package>
